istio-app-config.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: svc1-virtualservice
spec:
  hosts:
  - "svc1.example.com"
  gateways:
  - my-gateway
  http:      
  - route:
    - destination:
        host: svc1      
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: svc1-destination
spec:
  host: svc1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN      
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: svc2-virtualservice
spec:
  hosts:
  - "svc2.example.com"
  gateways:
  - my-gateway
  http:      
  - route:
    - destination:
        host: svc2    
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: svc2-destination
spec:
  host: svc2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN   
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: be-virtualservice
spec:
  gateways:
  - mesh 
  hosts:
  - be
  http:
  - match:
    - sourceLabels:
        app: svc1
    - sourceLabels:
        app: svc2
    route:      
    - destination:
        host: be
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: be-destination
spec:
  host: be
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN     
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
