ext_authz_rules.yaml
## ingress --> svc1
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: ing-svc1-request-authn-policy
 namespace: default
spec:
  selector:
    matchLabels:
      app: svc1
  jwtRules:
  - issuer: "testing@secure.istio.io"
    audiences:
    - "http://svc1.default.svc.cluster.local:8080/"  
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.10/security/tools/jwt/samples/jwks.json"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ing-svc1-authz-policy
 namespace: default
spec:
 action: ALLOW
 selector:
   matchLabels:
     app: svc1
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["GET"]
   when:
   - key: request.auth.claims[iss]
     values: ["testing@secure.istio.io"]
   - key: request.auth.claims[aud]
     values: ["http://svc1.default.svc.cluster.local:8080/"]          
---
## ingress --> svc2
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: ing-svc2-request-authn-policy
 namespace: default
spec:
  selector:
    matchLabels:
      app: svc2
  jwtRules:
  - issuer: "testing@secure.istio.io"
    audiences:
    - "http://svc2.default.svc.cluster.local:8080/"  
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.10/security/tools/jwt/samples/jwks.json" 
    forwardOriginalToken: true 
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ing-svc2-authz-policy
 namespace: default
spec:
 action: ALLOW
 selector:
   matchLabels:
     app: svc2
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["GET"]
   when:
   - key: request.auth.claims[iss]
     values: ["testing@secure.istio.io"]
   - key: request.auth.claims[aud]
     values: ["http://svc2.default.svc.cluster.local:8080/"]        
---
## default deny all
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-all-default
 namespace: default
spec:
  {}
---
## svc --> be-v1
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: svc-be-v1-request-authn-policy
 namespace: default
spec:
  selector:
    matchLabels:
      app: be
      version: v1
  jwtRules:
  - issuer: "testing@secure.istio.io"
    audiences:
    - "http://be.default.svc.cluster.local:8080/"   
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.10/security/tools/jwt/samples/jwks.json"  
    # forwardOriginalToken: true
    outputPayloadToHeader: x-jwt-payload    
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: svc1-be-v1-authz-policy
 namespace: default
spec:
 action: ALLOW
 selector:
   matchLabels:
     app: be
     version: v1
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/svc1-sa"]
   to:
   - operation:
       methods: ["GET"]
   when:
   - key: request.auth.claims[iss]
     values: ["testing@secure.istio.io"]
   - key: request.auth.claims[aud]
     values: ["http://be.default.svc.cluster.local:8080/"]        
---
## svc --> be-v2
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
 name: svc-be-v2-request-authn-policy
 namespace: default
spec:
  selector:
    matchLabels:
      app: be
      version: v2
  jwtRules:
  - issuer: "testing@secure.istio.io"
    audiences:
    - "http://be.default.svc.cluster.local:8080/"   
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.10/security/tools/jwt/samples/jwks.json" 
    # forwardOriginalToken: true
    outputPayloadToHeader: x-jwt-payload
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: svc1-be-v2-authz-policy
 namespace: default
spec:
 action: ALLOW
 selector:
   matchLabels:
     app: be
     version: v2
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/svc1-sa"]
   to:
   - operation:
       methods: ["GET"]
   when:
   - key: request.auth.claims[iss]
     values: ["testing@secure.istio.io"]
   - key: request.auth.claims[aud]
     values: ["http://be.default.svc.cluster.local:8080/"]
